// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherwidgetWapper renders correctly with showCurrent and showHourly props 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8058vh-MuiPaper-root-MuiCard-root"
    id="drawer-container"
  >
    <div
      class="MuiCardHeader-root css-ththz0-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
        >
          Weather widget
        </span>
      </div>
      <div
        class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
      >
        <button
          aria-label="menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-110d5us-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            MenuIcon Mock
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation4 MuiCard-root css-1sccb5g-MuiPaper-root-MuiCard-root"
      style="visibility: hidden;"
    >
      <div
        class="MuiCardHeader-root css-yr0goj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        />
        <div
          class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
        >
          <button
            aria-label="menu"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-110d5us-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-146fpaj-MuiCardContent-root"
      >
        <div
          class="MuiStack-root css-1vu7i2d-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-gi7hi0-MuiTypography-root"
          >
            Latitude
          </span>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1aznpnh-MuiSlider-root"
            data-testid="latitude-slider"
          >
            <span
              class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
              style="left: 0%; width: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              -90
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="1"
              style="left: 25%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="1"
              style="left: 25%;"
            >
              -45
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="2"
              style="left: 50%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="2"
              style="left: 50%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="3"
              style="left: 75%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="3"
              style="left: 75%;"
            >
              45
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="4"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="4"
              style="left: 100%;"
            >
              90
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-jx1sa5-MuiSlider-thumb"
              data-index="0"
              style="left: 50%;"
            >
              <input
                aria-label="Latitude"
                aria-orientation="horizontal"
                aria-valuemax="90"
                aria-valuemin="-90"
                aria-valuenow="0"
                data-index="0"
                max="90"
                min="-90"
                step="0.1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="0"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-7d61z1-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    0
                  </span>
                </span>
              </span>
            </span>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
        </div>
        <div
          class="MuiStack-root css-1vu7i2d-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-gi7hi0-MuiTypography-root"
          >
            Longitude
          </span>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1aznpnh-MuiSlider-root"
            data-testid="longitude-slider"
          >
            <span
              class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
              style="left: 0%; width: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              -180
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="1"
              style="left: 12.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="1"
              style="left: 12.5%;"
            >
              -135
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="2"
              style="left: 25%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="2"
              style="left: 25%;"
            >
              -90
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="3"
              style="left: 37.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="3"
              style="left: 37.5%;"
            >
              -45
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="4"
              style="left: 50%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="4"
              style="left: 50%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="5"
              style="left: 62.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="5"
              style="left: 62.5%;"
            >
              45
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="6"
              style="left: 75%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="6"
              style="left: 75%;"
            >
              90
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="7"
              style="left: 87.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="7"
              style="left: 87.5%;"
            >
              135
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="8"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="8"
              style="left: 100%;"
            >
              180
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-jx1sa5-MuiSlider-thumb"
              data-index="0"
              style="left: 50%;"
            >
              <input
                aria-label="Logitude"
                aria-orientation="horizontal"
                aria-valuemax="180"
                aria-valuemin="-180"
                aria-valuenow="0"
                data-index="0"
                max="180"
                min="-180"
                step="0.1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="0"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-7d61z1-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    0
                  </span>
                </span>
              </span>
            </span>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-9sb1g-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Save
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-rukav2-MuiCardContent-root"
    >
      <div>
        Mocked WeatherCurrent
      </div>
      <div>
        Mocked WeatherHourly
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WeatherwidgetWapper renders error state correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8058vh-MuiPaper-root-MuiCard-root"
    id="drawer-container"
  >
    <div
      class="MuiCardHeader-root css-ththz0-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
        >
          Weather widget
        </span>
      </div>
      <div
        class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
      >
        <button
          aria-label="menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-110d5us-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            MenuIcon Mock
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-standardError MuiAlert-standard css-x7o5da-MuiPaper-root-MuiAlert-root"
      role="alert"
    >
      <div
        class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
          data-testid="ErrorOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
      >
        Something wrong. Please retry it later!
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation4 MuiCard-root css-1sccb5g-MuiPaper-root-MuiCard-root"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="MuiCardHeader-root css-yr0goj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        />
        <div
          class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
        >
          <button
            aria-label="menu"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-110d5us-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-146fpaj-MuiCardContent-root"
      >
        <div
          class="MuiStack-root css-1vu7i2d-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-gi7hi0-MuiTypography-root"
          >
            Latitude
          </span>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1aznpnh-MuiSlider-root"
            data-testid="latitude-slider"
          >
            <span
              class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
              style="left: 0%; width: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              -90
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="1"
              style="left: 25%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="1"
              style="left: 25%;"
            >
              -45
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="2"
              style="left: 50%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="2"
              style="left: 50%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="3"
              style="left: 75%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="3"
              style="left: 75%;"
            >
              45
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="4"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="4"
              style="left: 100%;"
            >
              90
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-jx1sa5-MuiSlider-thumb"
              data-index="0"
              style="left: 50%;"
            >
              <input
                aria-label="Latitude"
                aria-orientation="horizontal"
                aria-valuemax="90"
                aria-valuemin="-90"
                aria-valuenow="0"
                data-index="0"
                max="90"
                min="-90"
                step="0.1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="0"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-7d61z1-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    0
                  </span>
                </span>
              </span>
            </span>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
        </div>
        <div
          class="MuiStack-root css-1vu7i2d-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-gi7hi0-MuiTypography-root"
          >
            Longitude
          </span>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1aznpnh-MuiSlider-root"
            data-testid="longitude-slider"
          >
            <span
              class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
              style="left: 0%; width: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              -180
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="1"
              style="left: 12.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="1"
              style="left: 12.5%;"
            >
              -135
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="2"
              style="left: 25%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="2"
              style="left: 25%;"
            >
              -90
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="3"
              style="left: 37.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="3"
              style="left: 37.5%;"
            >
              -45
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="4"
              style="left: 50%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="4"
              style="left: 50%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="5"
              style="left: 62.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="5"
              style="left: 62.5%;"
            >
              45
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="6"
              style="left: 75%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="6"
              style="left: 75%;"
            >
              90
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="7"
              style="left: 87.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="7"
              style="left: 87.5%;"
            >
              135
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="8"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="8"
              style="left: 100%;"
            >
              180
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-jx1sa5-MuiSlider-thumb"
              data-index="0"
              style="left: 50%;"
            >
              <input
                aria-label="Logitude"
                aria-orientation="horizontal"
                aria-valuemax="180"
                aria-valuemin="-180"
                aria-valuenow="0"
                data-index="0"
                max="180"
                min="-180"
                step="0.1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="0"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-7d61z1-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    0
                  </span>
                </span>
              </span>
            </span>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-9sb1g-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Save
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-rukav2-MuiCardContent-root"
    >
      <div>
        Mocked WeatherCurrentSkeleton
      </div>
      <div>
        Mocked WeatherHourlySkeleton
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WeatherwidgetWapper renders loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-8058vh-MuiPaper-root-MuiCard-root"
    id="drawer-container"
  >
    <div
      class="MuiCardHeader-root css-ththz0-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
        >
          Weather widget
        </span>
      </div>
      <div
        class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
      >
        <button
          aria-label="menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-110d5us-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span>
            MenuIcon Mock
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation4 MuiCard-root css-1sccb5g-MuiPaper-root-MuiCard-root"
      style="visibility: hidden; webkit-transform: translateY(-0px); transform: translateY(-0px);"
    >
      <div
        class="MuiCardHeader-root css-yr0goj-MuiCardHeader-root"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        />
        <div
          class="MuiCardHeader-action css-sgoict-MuiCardHeader-action"
        >
          <button
            aria-label="menu"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary MuiIconButton-sizeMedium css-110d5us-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-tzssek-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiCardContent-root css-146fpaj-MuiCardContent-root"
      >
        <div
          class="MuiStack-root css-1vu7i2d-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-gi7hi0-MuiTypography-root"
          >
            Latitude
          </span>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1aznpnh-MuiSlider-root"
            data-testid="latitude-slider"
          >
            <span
              class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
              style="left: 0%; width: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              -90
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="1"
              style="left: 25%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="1"
              style="left: 25%;"
            >
              -45
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="2"
              style="left: 50%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="2"
              style="left: 50%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="3"
              style="left: 75%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="3"
              style="left: 75%;"
            >
              45
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="4"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="4"
              style="left: 100%;"
            >
              90
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-jx1sa5-MuiSlider-thumb"
              data-index="0"
              style="left: 50%;"
            >
              <input
                aria-label="Latitude"
                aria-orientation="horizontal"
                aria-valuemax="90"
                aria-valuemin="-90"
                aria-valuenow="0"
                data-index="0"
                max="90"
                min="-90"
                step="0.1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="0"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-7d61z1-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    0
                  </span>
                </span>
              </span>
            </span>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
        </div>
        <div
          class="MuiStack-root css-1vu7i2d-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-gi7hi0-MuiTypography-root"
          >
            Longitude
          </span>
          <span
            class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1aznpnh-MuiSlider-root"
            data-testid="longitude-slider"
          >
            <span
              class="MuiSlider-rail css-14pt78w-MuiSlider-rail"
            />
            <span
              class="MuiSlider-track css-1gv0vcd-MuiSlider-track"
              style="left: 0%; width: 50%;"
            />
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="0"
              style="left: 0%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="0"
              style="left: 0%;"
            >
              -180
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="1"
              style="left: 12.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="1"
              style="left: 12.5%;"
            >
              -135
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="2"
              style="left: 25%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="2"
              style="left: 25%;"
            >
              -90
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="3"
              style="left: 37.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="3"
              style="left: 37.5%;"
            >
              -45
            </span>
            <span
              class="MuiSlider-mark MuiSlider-markActive css-6cwnna-MuiSlider-mark"
              data-index="4"
              style="left: 50%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-1eoe787-MuiSlider-markLabel"
              data-index="4"
              style="left: 50%;"
            >
              0
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="5"
              style="left: 62.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="5"
              style="left: 62.5%;"
            >
              45
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="6"
              style="left: 75%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="6"
              style="left: 75%;"
            >
              90
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="7"
              style="left: 87.5%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="7"
              style="left: 87.5%;"
            >
              135
            </span>
            <span
              class="MuiSlider-mark css-1tfve6q-MuiSlider-mark"
              data-index="8"
              style="left: 100%;"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-markLabel MuiSlider-markLabel css-yafthl-MuiSlider-markLabel"
              data-index="8"
              style="left: 100%;"
            >
              180
            </span>
            <span
              class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-jx1sa5-MuiSlider-thumb"
              data-index="0"
              style="left: 50%;"
            >
              <input
                aria-label="Logitude"
                aria-orientation="horizontal"
                aria-valuemax="180"
                aria-valuemin="-180"
                aria-valuenow="0"
                data-index="0"
                max="180"
                min="-180"
                step="0.1"
                style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
                type="range"
                value="0"
              />
              <span
                aria-hidden="true"
                class="MuiSlider-valueLabel css-7d61z1-MuiSlider-valueLabel"
              >
                <span
                  class="MuiSlider-valueLabelCircle"
                >
                  <span
                    class="MuiSlider-valueLabelLabel"
                  >
                    0
                  </span>
                </span>
              </span>
            </span>
          </span>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-ctpjxq-MuiDivider-root"
          />
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-9sb1g-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Save
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root css-rukav2-MuiCardContent-root"
    >
      <div>
        Mocked WeatherCurrentSkeleton
      </div>
      <div>
        Mocked WeatherHourlySkeleton
      </div>
    </div>
  </div>
</DocumentFragment>
`;
